force-app/main/default/objects/Activity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <description>Categorizes the task into a specific subtype to better distinguish its business purpose.</description>
    <inlineHelpText>Select the appropriate subtype that best describes the nature of this task. This field is used for internal tracking, automation, and reporting purposes.</inlineHelpText>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Billing/pay</fullName>
            </value>
            <value>
                <fullName>COI/EOI Requested</fullName>
                <isActive>false</isActive>
                <label>COI/EOI Requested</label>
            </value>
            <value>
                <fullName>Docs Requested</fullName>
                <isActive>false</isActive>
                <label>Docs Requested</label>
            </value>
            <value>
                <fullName>Follow-up Needed</fullName>
                <isActive>false</isActive>
                <label>Follow-up Needed</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Payement Requested</fullName>
                <isActive>false</isActive>
                <label>Payement Requested</label>
            </value>
            <value>
                <fullName>Plan Cancellation</fullName>
                <isActive>false</isActive>
                <label>Plan Cancellation</label>
            </value>
            <value>
                <fullName>Renewal Review</fullName>
                <isActive>false</isActive>
                <label>Renewal Review</label>
            </value>
            <value>
                <fullName>Renewal prep</fullName>
                <isActive>false</isActive>
                <label>Renewal prep</label>
            </value>
            <value>
                <fullName>Status Follow -up</fullName>
                <isActive>false</isActive>
                <label>Status Follow -up</label>
            </value>
            <value>
                <fullName>Upload to 상담 전 안내 이메일 발송</fullName>
                <isActive>false</isActive>
                <label>Upload to 상담 전 안내 이메일 발송</label>
            </value>
            <value>
                <fullName>리뉴얼 안내 자동 이메일</fullName>
                <isActive>false</isActive>
                <label>리뉴얼 안내 자동 이메일</label>
            </value>
            <value>
                <fullName>전자싸인</fullName>
                <isActive>false</isActive>
                <label>전자싸인</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>