force-app/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates the category of insurance or service associated with the task. This helps categorize and prioritize tasks based on the nature of the follow-up or customer interest.</description>
    <inlineHelpText>Select the type of insurance or service this task is related to:
• ACA New – New Affordable Care Act inquiry or application
• Personal Lines – Home, auto, or other personal insurance lines
• Commercial Lines – Business or commercial insurance products
• Medicare New – New Medicare-related inquiry or enrollment
• T65 - 4 Months Out – Prospect approaching 65 years old in 4 months (Medicare preparation)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>auto/home</fullName>
            </value>
            <value>
                <fullName>ACA Health</fullName>
            </value>
            <value>
                <fullName>Group Health</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>ACA New</fullName>
                <isActive>false</isActive>
                <label>ACA New</label>
            </value>
            <value>
                <fullName>Commerccail lines</fullName>
                <isActive>false</isActive>
                <label>Commerccail lines</label>
            </value>
            <value>
                <fullName>Medicare new</fullName>
                <isActive>false</isActive>
                <label>Medicare new</label>
            </value>
            <value>
                <fullName>Personal Lines</fullName>
                <isActive>false</isActive>
                <label>Personal Lines</label>
            </value>
            <value>
                <fullName>T65 - 4 Months Out</fullName>
                <isActive>false</isActive>
                <label>T65 - 4 Months Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>